src/content/docs/ja/sdk/android/v5/features/attribution.mdx
---
title: "アトリビューション情報の取得"
description: "Adjust SDKを使ってアトリビューションの変更を受信します。"
slug: "en/sdk/android/features/attribution"
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v4: "/en/sdk/android/v4/features/attribution"
---
ユーザーがAdjustリンクをクリックすると、そのアトリビューション情報が更新されます。これは、ユーザーが[ディープリンク](https://help.adjust.com/en/article/deep-links)をクリックした場合に発生します。ユーザーのアトリビューションについての情報は、`AdjustAttribution`クラスに表示されます。

AdjustAttributionクラスのプロパティ \{\#adjustattribution\-class\-properties\}
--------------------------------------------------------------------------

`AdjustAttribution`クラスには、デバイスの現在のアトリビューションステータスに関する詳細が含まれています。ユーザーの入力されていない値は全て`null`値として返されます。
<callout type="note"> 

以下の値には、[`AdjustConfig`インスタンスの`enableCostDataInAttribution`メソッド](/en/sdk/android/configuration#enable-cost-data-sending)を呼び出した場合にのみアクセスが可能です。

* `costType`
* `costAmount`
* `costCurrency`

</Callout> 

|          値          |  データタイプ  |                                          説明                                           |
|---------------------|----------|---------------------------------------------------------------------------------------|
| `trackerToken`      | `String` | デバイスが現在アトリビュートされているリンクのトークン                                                           |
| `trackerName`       | `String` | デバイスが現在アトリビュートされているリンクの名前                                                             |
| `network`           | `String` | デバイスが現在アトリビュートされているネットワークの名前                                                          |
| `campaign`          | `String` | デバイスが現在アトリビュートされているキャンペーンの名前                                                          |
| `adgroup`           | `String` | デバイスが現在アトリビュートされているアドグループの名前                                                          |
| `creative`          | `String` | デバイスが現在アトリビュートされているクリエイティブの名前                                                         |
| `clickLabel`        | `String` | インストールがタグされている[クリックラベル](https://help.adjust.com/en/article/user-rewards)              |
| `costType`          | `String` | キャンペーン価格モデル（例：cpi）                                                                    |
| `costAmount`        | `Double` | インストールのコスト                                                                            |
| `costCurrency`      | `String` | コストに関連する[3文字のISO 4217通貨コード](https://www.iban.com/currency-codes)                      |
| `fbInstallReferrer` | `String` | [Facebookインストールリファラー](https://developers.facebook.com/docs/app-ads/install-referrer/) |

アトリビューションが変更されたときに関数をトリガーする \{\#trigger\-a\-function\-when\-attribution\-changes\}
------------------------------------------------------------------------------------------

<codeblock title="メソッドシグネチャー"> 

```java
public void setOnAttributionChangedListener(OnAttributionChangedListener onAttributionChangedListener)
```

</CodeBlock> 

SDKはアトリビューションの変更を受信し、更新を検出したときに関数を呼び出すことができます。コールバック関数を設定するには、関数名を引数として`setOnAttributionChangedListener`メソッドを呼び出します。
<callout type="important"> 

アプリ内でAdjust SDKを初期化する **前** に、`setOnAttributionChangedListener`メソッドを呼び出す必要があります。
</Callout> <tabs> <tab title="Kotlin" sync="kotlin"> 

```kotlin
val config = AdjustConfig(this, appToken, environment)
//...
config.setOnAttributionChangedListener {
   override fun onAttributionChanged(attribution: AdjustAttribution) {}
   }
//...
Adjust.initSdk(config)
```

</Tab> <tab title="Java" sync="java"> 

```java
AdjustConfig config = new AdjustConfig(this, appToken, environment);
//...
config.setOnAttributionChangedListener(new OnAttributionChangedListener() {
   @Override
   public void onAttributionChanged(AdjustAttribution attribution) {}
});
//...
Adjust.initSdk(config);
```

</Tab> </Tabs> 

### Facebookインストールリファラー \{\#facebook\-install\-referrer\}

Adjust SDKは、Facebookインストールリファラー情報を[`AdjustAttribution`オブジェクト](#adjustattribution-class-properties)の`String`プロパティとして受信します。この情報には、コンテンツをJSONオブジェクトとしてシリアル化することでアクセスすることができます。
<tabs> <tab title="Kotlin" sync="kotlin"> 

```kotlin
val config = AdjustConfig(this, appToken, environment)
//...
config.setOnAttributionChangedListener {
   val fbInstallReferrerJSONObject = extractFBInstallReferrerJSON(it)
}

fun extractFBInstallReferrerJSON(adjustAttribution: AdjustAttribution): JSONObject? {
   try {
      return JSONObject(adjustAttribution.fbInstallReferrer)
   } catch (e: JSONException) {
      Log.d("example", e.message!!)
   }
   return null
}
//...
Adjust.initSdk(config)
```

</Tab> <tab title="Java" sync="java"> 

```java
AdjustConfig config = new AdjustConfig(this, appToken, environment);
//...
config.setOnAttributionChangedListener(new OnAttributionChangedListener() {
   @Override
   public void onAttributionChanged(AdjustAttribution adjustAttribution) {
   JSONObject fbInstallReferrerJSONObject = extractFBInstallReferrerJSON(adjustAttribution);
   }
});

@Nullable
JSONObject extractFBInstallReferrerJSON(AdjustAttribution adjustAttribution) {
   try {
      return new JSONObject(adjustAttribution.fbInstallReferrer);
   } catch (JSONException e) {
      Log.d("example", e.getMessage());
   }
   return null;
}
//...
Adjust.initSdk(config);
```

</Tab> </Tabs> 

現在のアトリビューション情報を取得する \{\#get\-current\-attribution\-information\}
----------------------------------------------------------------------

<codeblock title="メソッドシグネチャー"> 

```java
public static void getAttribution(final OnAttributionReadListener attributionReadListener)
```

</CodeBlock> 

ユーザーがアプリをインストールすると、Adjustはそのインストールをキャンペーンにアトリビュートします。Adjust SDKでは、インストールのキャンペーンアトリビューションの詳細にアクセスすることができます。この情報を返すには、`Adjust.getAttribution`メソッドにリスナー関数をパスします。SDKは非同期に情報を取得し、`AdjustAttribution`オブジェクトとしてリスナー関数にパスます。
<tabs> <tab title="Kotlin" sync="kotlin"> 

```kotlin
Adjust.getAttribution {attribution ->
            // read attribution
        }
```

</Tab> <tab title="Java" sync="java" > 

```java
Adjust.getAttribution(new OnAttributionReadListener() {
    @Override
    public void onAttributionRead(AdjustAttribution attribution) {
    }
});

```

</Tab> </Tabs>

